# termex

./: CLAUDE.md  README.md  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: detailed-design.md  requirements.md
docs/iterations/: v0.1.0-mvp.md  v0.11.0-LOCAL_AI_COMPLETE.md  v0.14.0-font-management.md  v0.17.0-server-to-server-sftp.md  v0.18.0-proxy-protocols.md  v0.2.0-sftp.md  v0.21.0-dynamic-forward.md  v0.22.0-proxy-command.md  v0.23.0-portable.md  v0.25.0-security-compliance.md  v0.26.0-ai-smart-autocomplete.md  v0.27.0-ssh-config-snippets.md  v0.28.0-server-monitoring.md  v0.29.0-session-recording.md  v0.3.0-port-forwarding.md  v0.30.0-team-collaboration.md  v0.31.0-ai-assistant-evolution.md  v0.32.0-terminal-split-pane.md  v0.33.0-cloud-native.md  v0.34.0-team-collaboration-v2.md  v0.4.0-theme-ux.md  v0.40.0-mobile-foundation.md  v0.42.0-cross-device-sync.md  v0.42.1-mobile-server-sftp.md  v0.44.0-mobile-ai-keychain.md  v0.46.0-mobile-appstore.md  v0.5.0-ai-core.md  v0.6.0-ai-advanced.md  v0.7.0-recording-monitoring.md  v0.8.0-plugin-system.md  v0.9.0-stable-release.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: git-sync.sh
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  local_pty.rs  state.rs
src-tauri/src/ai/: danger.rs  mod.rs  provider.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/commands/: ai.rs  audit.rs  clipboard.rs  config.rs  crypto.rs  fonts.rs  git_sync.rs  local_fs.rs  menu.rs  mod.rs  plugin.rs  port_forward.rs  privacy.rs  proxy.rs  recording.rs  server.rs  settings.rs  sftp.rs  snippet.rs  ssh.rs  ssh_config.rs  team.rs  tor.rs  update.rs
src-tauri/src/crypto/: aes.rs  entropy_pool.rs  kdf.rs  key_spectrum.rs  mod.rs  password_policy.rs  traits.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/local_ai/: mod.rs
src-tauri/src/plugin/: manifest.rs  mod.rs  registry.rs
src-tauri/src/recording/: asciicast.rs  mod.rs  recorder.rs
src-tauri/src/sftp/: mod.rs  session.rs
src-tauri/src/ssh/: auth.rs  chain_connect.rs  channel.rs  config_parser.rs  forward.rs  host_key.rs  mod.rs  proxy.rs  proxy_command.rs  reverse_forward.rs  session.rs  socks5.rs
src-tauri/src/storage/: db.rs  migrations.rs  mod.rs  models.rs  proxies.rs  recording.rs  snippet.rs
src-tauri/src/team/: crypto.rs  git.rs  mod.rs  sync.rs  types.rs
src-tauri/tests/: test_ai.rs  test_git_sync.rs  test_keychain.rs  test_proxy_command.rs  test_recording.rs  test_reverse_forward.rs  test_security.rs  test_sentinel.rs  test_snippet.rs  test_socks5.rs  test_ssh_config.rs  test_storage.rs  test_team_crypto.rs  test_team_sync.rs  test_tor.rs
src/__tests__/: snippetStore.test.ts  snippetVariable.test.ts  sshConfigPreview.test.ts
src/composables/: useCommandTracker.ts  useConfigExport.ts  useGitSync.ts  useIdleTimer.ts  useReconnect.ts  useSftpDrag.ts  useTmux.ts  (+6 more)
(+81 files in other folders)
