[package]
name = "termex"
version = "0.30.0"
description = "Open-source AI-native SSH client — Always-on cloud AI workspace powered by SSH"
authors = ["Termex Contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "termex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
ring = "0.17"
argon2 = "0.5"
russh = "0.49"
russh-keys = "0.49"
russh-sftp = "2.1"
async-trait = "0.1"
dirs = "6"
tokio-util = "0.7"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
hex = "0.4"
open = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rfd = "0.17.2"
tokio-socks = "0.5"
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
portable-pty = "0.8"
arboard = "3"
zeroize = { version = "1", features = ["zeroize_derive"] }
glob = "0.3"
whoami = "1"
base64 = "0.22"
git2 = { version = "0.19", default-features = false, features = ["ssh", "https"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
